--- a/OCR(WF)/packages.config
+++ b/OCR(WF)/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Google.GData.Client" version="2.2.0.0" targetFramework="net472" />
+  <package id="Google.GData.Extensions" version="2.2.0.0" targetFramework="net472" />
+  <package id="Google.GData.Spreadsheets" version="2.2.0.0" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="4.0.5" targetFramework="net472" />
   <package id="OpenCvSharp-AnyCPU" version="2.4.10.20170306" targetFramework="net472" />
-  <package id="System.Runtime.WindowsRuntime" version="4.6.0" targetFramework="net472" />
-  <package id="System.Runtime.WindowsRuntime.UI.Xaml" version="4.6.0" targetFramework="net472" />
 </packages>
