winapi를 통해 블루스택 화면을 10초마다 받아오도록 하는 메서드를 작성. 다만 hidpi 환경에서 winapi는 완벽하지못하다.

--- a/OCR(WF)/OCR(WF).csproj
+++ b/OCR(WF)/OCR(WF).csproj
@@ -79,6 +79,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="screenshot.cs" />
     <Compile Include="TesseractService.cs" />
     <Compile Include="textedit.cs" />
     <EmbeddedResource Include="Form1.resx">
