--- a/OCR(WF)/OCR(WF).csproj
+++ b/OCR(WF)/OCR(WF).csproj
@@ -70,6 +70,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="adb.cs" />
     <Compile Include="OpenCV.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -79,7 +80,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="screenshot.cs" />
     <Compile Include="TesseractService.cs" />
     <Compile Include="textedit.cs" />
     <EmbeddedResource Include="Form1.resx">
